modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/function_return_type_invalid_covariance_2.gd
class A:
	func f() -> Node:
		return null

class B extends A:
	func f() -> Variant: # No `is_type_compatible()` misuse.
		return null

func test():
	pass
